# weni-platform-tests

./: .flake8  .gitignore  README.md  authenticators.py  clients.py  pyproject.toml  scheduler.py  schemas.py  settings.py
.github/workflows/: build-platforms-tests-push-branch-dockerhub.yaml
contrib/: gen_env.py
docker/: Dockerfile  docker-compose.yml
integrations/: clients.py  test_apptypes.py
integrations/schemas/: list_apptypes.json  retrieve_apptype.json
internal/: client.py
internal/chats/: clients.py  test_messages.py  test_permissions.py  test_projects.py  test_rooms.py
internal/chats/schemas/: create_message.json  create_message_media.json  create_room.json  list_message.json  list_permission.json  list_projects.json  retrieve_permission.json  retrieve_project.json
internal/connect/: clients.py  test_channels.py  test_list_classifiers.py  test_projects.py  test_ticketers.py
internal/connect/schemas/: create_ticketers.json  list_channels.json  list_classifiers.json  retrieve_user_api_token.json
internal/flows/: clients.py  sample_flow.json  test_flows.py  test_orgs.py  test_queues.py  test_users.py
internal/flows/schemas/: flows.json  queues.json  template_orgs.json  users.json
