[tool.poetry]
name = "weni-platform-tests"
version = "0.0.1"
description = ""
authors = ["Sandro Meireles"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.9.1"
requests = "^2.28.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
